force-app/main/default/objects/Order_Item__c/fields/Alternate_UOM__c.field-meta.xml
<CustomField>
    <fullName>Alternate_UOM__c</fullName>
    <label>Alternate UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UOM</valueSetName>
    </valueSet>
</CustomField>