force-app/main/default/objects/Order_Item__c/fields/Before_Category_Slab_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Before_Category_Slab_Unit_Price__c</fullName>
    <label>Before Category Slab Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>