force-app/main/default/objects/Order_Item__c/fields/Before_Scheme_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Before_Scheme_Unit_Price__c</fullName>
    <label>Before Scheme Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>