force-app/main/default/objects/Order_Item__c/fields/Buy_Product__c.field-meta.xml
<CustomField>
    <fullName>Buy_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buy Product</label>
    <referenceTo>Buy_Product__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>