force-app/main/default/objects/Order_Item__c/fields/Case_Qyt__c.field-meta.xml
<CustomField>
    <fullName>Case_Qyt__c</fullName>
    <label>Case Qyt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>