force-app/main/default/objects/Order_Item__c/fields/Category_Slab_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Category_Slab_Claim_Amount__c</fullName>
    <formula>(Before_Category_Slab_Unit_Price__c - After_Category_Slab_Unit_Price__c) * Quantity__c</formula>
    <label>Category Slab Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>