force-app/main/default/objects/Order_Item__c/fields/Cess__c.field-meta.xml
<CustomField>
    <fullName>Cess__c</fullName>
    <label>Cess</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>