force-app/main/default/objects/Order_Item__c/fields/CGST_TCSCode__c.field-meta.xml
<CustomField>
    <fullName>CGST_TCSCode__c</fullName>
    <formula>Product__r.CGST_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST_TCSCode</label>
    <type>Text</type>
</CustomField>