force-app/main/default/objects/Order_Item__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <formula>IF(
  Text(Order__r.Order_Type__c) = &apos;Primary Order&apos;,
  &apos;Primary&apos;,
  IF(
    Text(Order__r.Account__r.Secondary_Customer_Type__c) = &apos;Sub Stockiest&apos;,
    &apos;Sub Stockiest&apos;,
    &apos;Outlet&apos;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>