force-app/main/default/objects/Order_Item__c/fields/Delivered_Net_Weight__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Net_Weight__c</fullName>
    <formula>Delivered_Quantity__c * Product__r.Net_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivered Net Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>