force-app/main/default/objects/Order_Item__c/fields/Difference_Scheme_Unit_per_EA__c.field-meta.xml
<CustomField>
    <fullName>Difference_Scheme_Unit_per_EA__c</fullName>
    <formula>Before_Scheme_Unit_Price__c -  After_Scheme_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference Scheme Unit per EA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>