force-app/main/default/objects/Order_Item__c/fields/Discount_for_minimum_qant__c.field-meta.xml
<CustomField>
    <fullName>Discount_for_minimum_qant__c</fullName>
    <label>Discount for minimum qant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>