force-app/main/default/objects/Order_Item__c/fields/Dispatch_Status__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Status__c</fullName>
    <label>Dispatch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Dispatched</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>