force-app/main/default/objects/Order_Item__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <label>Document Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>