force-app/main/default/objects/Order_Item__c/fields/Each_Qyt__c.field-meta.xml
<CustomField>
    <fullName>Each_Qyt__c</fullName>
    <label>Each Qyt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>