force-app/main/default/objects/Order_Item__c/fields/EID__c.field-meta.xml
<CustomField>
    <fullName>EID__c</fullName>
    <label>EID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>