force-app/main/default/objects/Order_Item__c/fields/Fulfilled_Quantity_in_Cases__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Quantity_in_Cases__c</fullName>
    <formula>Delivered_Quantity__c / Product__r.Uom_Conversion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfilled_Quantity_in_Cases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>