force-app/main/default/objects/Order_Item__c/fields/IGST_TCSCode__c.field-meta.xml
<CustomField>
    <fullName>IGST_TCSCode__c</fullName>
    <formula>Product__r.IGST_Code__c</formula>
    <label>IGST TCSCode</label>
    <type>Text</type>
</CustomField>