force-app/main/default/objects/Order_Item__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <label>Item Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>