force-app/main/default/objects/Order_Item__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <label>Item Description</label>
    <type>TextArea</type>
</CustomField>