force-app/main/default/objects/Order_Item__c/fields/Minimum_Stock__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Stock__c</fullName>
    <label>Minimum Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>