force-app/main/default/objects/Order_Item__c/fields/Minmum_eligibe_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Minmum_eligibe_Quantity__c</fullName>
    <label>Minmum eligibe Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>