force-app/main/default/objects/Order_Item__c/fields/NET_WEIGHT__c.field-meta.xml
<CustomField>
    <fullName>NET_WEIGHT__c</fullName>
    <formula>Quantity__c *  Product__r.Net_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NET WEIGHT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>