force-app/main/default/objects/Order_Item__c/fields/Non_Taxable_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Non_Taxable_Order_Value__c</fullName>
    <formula>Total_Amount__c -  Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Taxable Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>