force-app/main/default/objects/Order_Item__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <formula>Order__r.Order_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>