force-app/main/default/objects/Order_Item__c/fields/order_grand_total__c.field-meta.xml
<CustomField>
    <fullName>order_grand_total__c</fullName>
    <formula>Order__r.Grand_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>order grand total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>