force-app/main/default/objects/Order_Item__c/fields/Order_Item_Weight__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Weight__c</fullName>
    <formula>SKU_Weight__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Item Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>