force-app/main/default/objects/Order_Item__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <formula>Order__r.Name</formula>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>