force-app/main/default/objects/Order_Item__c/fields/Order_Qty_in_Case__c.field-meta.xml
<CustomField>
    <fullName>Order_Qty_in_Case__c</fullName>
    <formula>Quantity__c / Product__r.Uom_Conversion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Qty in Case</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>