force-app/main/default/objects/Order_Item__c/fields/Product_Category12__c.field-meta.xml
<CustomField>
    <fullName>Product_Category12__c</fullName>
    <formula>Product__r.ProductCategory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>