force-app/main/default/objects/Order_Item__c/fields/product_Code__c.field-meta.xml
<CustomField>
    <fullName>product_Code__c</fullName>
    <formula>Product__r.Name</formula>
    <label>product Code</label>
    <type>Text</type>
</CustomField>