force-app/main/default/objects/Order_Item__c/fields/Product_TCS_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_TCS_Code__c</fullName>
    <formula>Product__r.Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product TCS Code</label>
    <type>Text</type>
</CustomField>