force-app/main/default/objects/Order_Item__c/fields/Product_Weight__c.field-meta.xml
<CustomField>
    <fullName>Product_Weight__c</fullName>
    <label>Product Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>