force-app/main/default/objects/Order_Item__c/fields/Sales_Organization_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization_c__c</fullName>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Parent_Depot</valueSetName>
    </valueSet>
</CustomField>