force-app/main/default/objects/Order_Item__c/fields/Sales_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Sales_Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Strategy</label>
    <referenceTo>Sales_Strategy__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>