force-app/main/default/objects/Order_Item__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme</label>
    <referenceTo>Product_Scheme__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>