force-app/main/default/objects/Order_Item__c/fields/Secondary_Invoice_Pending_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Invoice_Pending_Quantity__c</fullName>
    <formula>Quantity__c -  Secondary_Invoice_Quantitty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Invoice Pending Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>