force-app/main/default/objects/Order_Item__c/fields/Secondary_Invoice_Quantitty__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Invoice_Quantitty__c</fullName>
    <label>Secondary Invoice Quantitty</label>
    <summarizedField>Secondary_Invoice_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>Secondary_Invoice_Item__c.Order_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>