force-app/main/default/objects/Order_Item__c/fields/SGST_TCSCode__c.field-meta.xml
<CustomField>
    <fullName>SGST_TCSCode__c</fullName>
    <formula>Product__r.SGST_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST_TCSCode</label>
    <type>Text</type>
</CustomField>