force-app/main/default/objects/Order_Item__c/fields/SKU_Name__c.field-meta.xml
<CustomField>
    <fullName>SKU_Name__c</fullName>
    <formula>Product__r.SKU_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU_Name</label>
    <type>Text</type>
</CustomField>