force-app/main/default/objects/Order_Item__c/fields/SKU_Weight__c.field-meta.xml
<CustomField>
    <fullName>SKU_Weight__c</fullName>
    <label>SKU Weight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>