force-app/main/default/objects/Order_Item__c/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <formula>Order__r.Store__r.Name</formula>
    <label>Store Name</label>
    <type>Text</type>
</CustomField>