force-app/main/default/objects/Order_Item__c/fields/Tax_Class__c.field-meta.xml
<CustomField>
    <fullName>Tax_Class__c</fullName>
    <formula>Text(Product__r.Tax_Class2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Class</label>
    <type>Text</type>
</CustomField>