force-app/main/default/objects/Order_Item__c/fields/TCS_Code__c.field-meta.xml
<CustomField>
    <fullName>TCS_Code__c</fullName>
    <label>TCS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>