force-app/main/default/objects/Order_Item__c/fields/Total_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount1__c</fullName>
    <formula>(( (Quantity__c *  Unit_price__c ) -  Discount__c )) + (( (Quantity__c *  Unit_price__c ) -  Discount__c ) *  Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total amount_1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>