force-app/main/default/objects/Order_Item__c/fields/Total_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Claim_Amount__c</fullName>
    <formula>Category_Slab_Claim_Amount__c + Scheme_Claim_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>