force-app/main/default/objects/Order_Item__c/fields/Total_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Value__c</fullName>
    <formula>Non_Taxable_Order_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>