force-app/main/default/objects/Order_Item__c/fields/Unit_price__c.field-meta.xml
<CustomField>
    <fullName>Unit_price__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>