force-app/main/default/objects/Order_Item__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <formula>TEXT(Product__r.UOM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UOM</label>
    <type>Text</type>
</CustomField>