force-app/main/default/objects/Order_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Product__c</columns>
    <columns>NET_WEIGHT__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>